2005-01-07  Sarfraaz Ahmed <asarfraaz@novell.com>

	* camel/camel-exchange-folder.c : Now implements the CamelFolderDisco
	class methods. Needed for making folders available when offline.
	* camel/camel-exchange-folder.h : Similar
	* camel/camel-exchange-store.c : CamelExchangeStore is now derived
	from CamelDiscoStoreClass. Implemented the virtual functions for this.
	* camel/camel-exchange-store.h : Similar

2005-01-07  Sarfraaz Ahmed <asarfraaz@novell.com>

	Patch submitted by JP Rosevear for SelectNames fix.
	* configure.in : Now check for libedataserverui as well.
	* lib/Makefile.am : Removed the IDL files.
	* shell/Makefile.am : Similar
	* lib/e2k-user-dialog.c : Replaced the CORBA methods with the 
	e-name-selector methods.
	* shell/e-folder-misc-dialogs.c : Similar

2005-01-05  Sarfraaz Ahmed <asarfraaz@novell.com>

	* addressbook/e-book-backend-exchange.c : Enabled offline support
	* addressbook/e-book-backend-gal.c : Similar
	* calendar/e-cal-backend-exchange-tasks.c : Similar
	* storage/exchange-account.c : Similar
	* storage/exchange-component.c : Similar
	* storage/exchange-component.h : Similar
	* storage/exchange-offline-listener.c : Similar
	* storage/main.c : Similar
	* calendar/e-cal-backend-exchange-calendar.c : Similar. Also fixed 
	some memory leaks
	* calendar/e-cal-backend-exchange.c : Offline and memory leak fixes.

2004-12-21  Sarfraaz Ahned <asarfraaz@novell.com>

	* addressbook/e-book-backend-exchange.c: Added offline error handling
	changes.
	* addressbook/e-book-backend-gal.c : Similar
	* calendar/e-cal-backend-exchange.c (e_cal_backend_exchange_add_object):
	The cache now checks for duplicate detatched instances before adding
        them. This fixes #70414
	(discard_detached_instance): Small leak fixed.
	* storage/e-folder-exchange.c : Added error checks
	* storage/exchange-folder-size.c : Object freeing code added.

2004-12-21  JP Rosevear  <jpr@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c: update for