@@ -1,3 +1,9 @@
+2005-01-08  Sarfraaz Ahmed <asarfraaz@novell.com>
+
+	* calendar/e-cal-backend-exchange-tasks.c : Return error messages
+	for operations not supported in offline.
+	* calendar/e-cal-backend-exchange.c : Similar
+
 2005-01-07  Sarfraaz Ahmed <asarfraaz@novell.com>
 
 	* camel/camel-exchange-folder.c : Now implements the CamelFolderDisco
